# warp-translation

./: .actrc  .gitignore  LICENSE  README.en.md  README.md
.claude/workflows/: daily-translate.prompt.md  sync-upstream-translations.ts  translate_batch.mjs
.github/actions/build-localized-tree/: action.yml
.github/workflows/: README.md  build-translation.yml  daily-sync-translate.yml
.trellis/: .template-hashes.json
.trellis/spec/backend/: index.md  quality-guidelines.md  rust-syn-extraction.md
.trellis/spec/guides/: index.md  translation-contract.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/05-04-translate-warp-project-to-chinese/: prd.md  task.json
.trellis/tasks/05-11-fix-menu-bar-translation-gap/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/05-15-sync-upstream-b9ec4f39/: prd.md  task.json
.trellis/tasks/05-18-refresh-fuzzy-translations/: implement.jsonl  prd.md  task.json
.trellis/tasks/05-18-translate-next-batch-of-new-entries-after-upstream-sync/: implement.jsonl  prd.md  targets.json  task.json  translations.json
.trellis/tasks/05-19-fix-builder-skipping-cargo-hidden-dir/: task.json
.trellis/tasks/05-19-translate-next-batch-of-new-auto-ui-entries/: apply_translations.py  prd.md  task.json
.trellis/tasks/05-19-translate-next-batch-of-new-auto-ui-entries-settings-view-appearance-page/: prd.md  task.json
.trellis/tasks/05-19-translate-next-batch-of-new-auto-ui-entries-settings-view-continued/: task.json
.trellis/tasks/05-20-review-8-fuzzy-entries-after-upstream-sync-fdd74928/: implement.jsonl  task.json
.trellis/tasks/05-20-sync-upstream-to-fdd74928/: check.jsonl  task.json
.trellis/tasks/05-23-translate-next-batch-180-entries-via-6-parallel-implementers/: check.jsonl  implement.jsonl  (+2 more)
tools/: Cargo.toml
tools/builder/: Cargo.toml
tools/builder/src/: fsutil.rs  lib.rs  main.rs  report.rs
tools/builder/tests/: build_safety.rs  edge_cases.rs
tools/extractor/: Cargo.toml
tools/extractor/src/: extract.rs  heuristic.rs  lib.rs  main.rs  model.rs  translation.rs  walk.rs
tools/translations/kit/: README.md  RUNBOOK.md  apply_batch.py  build_batch.py  diff_table.py  isolate_new.py  resolve_upstream.py  translate_batch.mjs
translations/: glossary.json
(+473 files in other folders)
