[workspace]
resolver = "2"
members = ["extractor", "builder"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
proc-macro2 = { version = "1.0.80", features = ["span-locations"] }
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
strsim = "0.11"
ulid = { version = "1", features = ["serde"] }
regex = "1"
once_cell = "1"

[profile.release]
lto = "thin"
codegen-units = 1
